--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^5.20.6",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "next": "14.2.12",
     "react": "^18",
     "react-dom": "^18"
